[tool.poetry]
name = "advent-2020"
version = "0.1.0"
description = ""
authors = ["Jeremiah Boby <mail@jeremiahboby.me>"]

[tool.poetry.dependencies]
python = "^3.8"
advent-of-code-data = "^0.8.5"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
